--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,198 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* Variables */
+  --app-background-color: #242424;
+  --blue: #35A2EB;
+  --green: #0DB800;
+  --red: #B80000;
+  --light-grey: #F2F2F2;
+  --medium-grey: #949494;
+  --dark-grey: #4B4B4B;
+  --outer-padding: .75em;
+  --default-font-size: .85em;
+  --small-font-size: calc(var(--h1-font-size) - .8em);
+  --h1-font-size: 1.6em;
+  --desktop-navbar-width: 18em;
+  --default-font: Helvetica, Inter, system-ui, Avenir, Arial, sans-serif;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html {
+  height: 100%;  
 }
 
 body {
-  margin: 0;
-  display: flex;
+  margin: 0px 10px 0px 10px;
+  border: 0;
+  height: 100vh;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+  background-color: var(--app-background-color);
+
+  font-family: var(--default-font);
+  font-weight: 400;
+  font-size: var(--default-font-size);
+  color: var(--dark-grey);
+  fill: var(--dark-grey);
+  
+  line-height:unset !important; /* turn off amplify setting */
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: var(--h1-font-size);
+  font-weight: 800;
+  margin: 0;
+  padding: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+h2 {
+  font-size: calc(var(--h1-font-size) - .2em);
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  font-size: calc(var(--h1-font-size) - .4em);
+  font-weight: 400;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+h4 {
+  font-size: calc(var(--h1-font-size) - .6em);
+  font-weight: 400;
+  font-style: italic;
+  margin: 0;
+  padding: 0;
+}
+
+small {
+  font-size: calc(var(--h1-font-size) - .8em);
+  display: block; /* allows height to shrink with smaller font size */
+}
+
+a {
+  font-weight: inherit;
+  text-decoration: inherit;
+}
+a:hover {
+  color: var(--blue);
+}
+
+.button-el {
+  padding: 0;
+  margin: 0;
+  border: 0;
   cursor: pointer;
-  transition: border-color 0.25s;
+  color: inherit;
+  background-color: inherit;
+  -webkit-transition: all .1s;
+  -moz-transition: all .1s;
+  -o-transition: all .1s;
+  transition: all .1s;
 }
-button:hover {
-  border-color: #646cff;
+.button-el:hover {
+  color: var(--blue) !important;
+  fill: var(--blue) !important;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.button-el:hover:active {
+  font-weight: 600 !important;
 }
+.button-el:hover:active svg {
+  transform: scale(1.1);
+}
+.active {
+  color: var(--blue) !important;
+  font-weight: 800 !important;
+  fill: var(--blue) !important;
+}
+
+ul {
+  padding: 0px;
+  margin: 0px;
+}
+
+.scrollable {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollable::-webkit-scrollbar {
+  display: none;
+}
+
+/* Sometimes browsers (safari) clip a pixel on bottom and/or left (probably rounding error) */
+/* so the svg path is 1 pixel larger than the svg encasing it, this ensures the extra pixels are visible */
+svg {
+  overflow: visible;
+}
+
+.svg-de-emphasize {
+  fill: var(--medium-grey);
+}
+
+.positive-value-change {
+  color: var(--green);
+}
+.negative-value-change {
+  color: var(--red);
+}
+
+/* Children should be a SectionHeading and SortSelector */
+.sortable-section-heading {
+  display: flex;
+}
+.sortable-section-heading :nth-child(2) {
+  margin-left: auto;
+}
+
+/* Following settings cover tables of data */
+/* basic-table--sub-row is for child rows to a parent, shown set into the parent */
+/* With heading should structure as: <table><thead><tbody><thead><tbody><table>..., without heading: <table><tbody><table> */
+.basic-table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 0; /* Along with separate setting above this allows for cell and row spacing when non-zero */
+  white-space: nowrap;
+}
+.basic-table th {
+  padding-top: .6em;
+  padding-bottom: .6em;
+  padding-right: .5em;
+  font-weight: 400;
+  background-color: var(--light-grey);
+}
+.basic-table tr:not(.basic-table--sub-row) td {
+  padding-top: .6em;
+  padding-bottom: .6em;
+  padding-right: .5em;
+  border-bottom: 1px solid var(--light-grey);
+}
+.basic-table th:first-child { padding-left: .5em; }
+.basic-table thead + tbody td:first-child { padding-left: 1em; }
+.basic-table tbody tr:last-child td { border-bottom: 0; }
+/* sub-row assumes content start one column in (first column blank for sub-rows and second slightly indented */
+.basic-table--sub-row td:not(:first-child) {
+  padding-top: .25em;
+  padding-bottom: .25em;
+  padding-right: .5em;
+  background-color: var(--light-grey);
+  border-bottom: 1px solid var(--app-background-color);
+}
+.basic-table--sub-row td:nth-child(2) { padding-left: 1em; }
+tr.basic-table--sub-row:has(+ :not(.basic-table--sub-row)) td {
+  border-bottom: 1px solid var(--light-grey);
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+    color: var(--dark-grey);
+    --app-background-color: #ffffff;
   }
 }
