Refactored much of the code.  Connected account view and holding view drill down.  Implemented rest calls to get data from db and using it in tables and chart.  Only thing not wired up is filters (params to rest calls are hardcoded.

--- a/src/components/HoldingView/HoldingView.css
+++ b/src/components/HoldingView/HoldingView.css
@@ -4,9 +4,9 @@
   gap: 1.25em;
 }
 
-.basic-table--sub-row .holding-group-list--two-line > :first-child {
+.basic-table--sub-row .basic-table--two-line > :first-child {
   font-size: .85em;
 }
-.basic-table--sub-row .holding-group-list--two-line > :nth-child(2) {
+.basic-table--sub-row .basic-table--two-line > :nth-child(2) {
   font-size: .75em;
 }
