--- a/src/components/AccountView/AccountTypeCategoryList/AccountTypeCategoryHeading/AccountTypeCategoryHeading.css
+++ b/src/components/AccountView/AccountTypeCategoryList/AccountTypeCategoryHeading/AccountTypeCategoryHeading.css
@@ -1,3 +1,6 @@
+.account-type-category-heading th:first-child {
+    text-align: left;
+}
 .account-type-category-heading th:not(:first-child) {
     text-align: right;
 }
