Added Reset button.  Changed visual button to use disabled instead of enabled (like regular button).  Placeholders while data is loading (required refactoring of data load a level up).

--- a/src/components/Filterbar/Filterbar.css
+++ b/src/components/Filterbar/Filterbar.css
@@ -21,10 +21,12 @@
 }
 
 .filterbar--apply {
-  width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .25em;
 }
-
-.filterbar .de-emphasize {
-  font-size: .85em;
+.filterbar--apply .button-el--visual {
+  width: 50%;
 }
