--- a/src/components/NetworthChart/NetworthChart.css
+++ b/src/components/NetworthChart/NetworthChart.css
@@ -13,3 +13,10 @@
     display: flex;
     transition: height .5s;
 }
+
+.networth-chart--no-data {
+    width: 100%;
+    margin-top: .5em;
+    display: flex;
+    justify-content: center;
+}
