Removed button features from section heading titles with no action callback.  Fixed visible button hover and press css not working (old enable logic still there).  Removed pointer cursor from active buttons.  Rendered hierarchy in filter drop lists.  ot token from fetchAuthSession at time of fetch (avoid timeouts).  Changed as of date calendar max date to today.  Added modal provider and hook, used to notify before signing out.  Added confirmation when clicking user icon to sign out.  Clear holdings filter if value has no data (updated filters may have excluded it).  Loaded app user id from auth user id in auth provider and used it for queries (got rid of hardcoded user id).  Changed filter bar droplist containing div’s widths to min-widths to they fill the container (except date dropdown where we want a specific width.)

--- a/src/components/DropdownList/DropdownList.css
+++ b/src/components/DropdownList/DropdownList.css
@@ -8,14 +8,38 @@
     }
 }
 
-/* *** Set --react-dropdown-select-handle-width to width of droplist element in parent, used to manage width when text overflows */
+/* *** Set --react-dropdown-select-handle-width to width or min-width of droplist element in parent, used to manage width when text overflows */
 .react-dropdown-select-content span {
     max-width: calc(var(--react-dropdown-select-handle-width) - 17px); /* used to controls size of dropdown when text overflows */
     overflow: hidden;
     text-overflow:ellipsis !important;
 }
 
+.dropdown-list--item {
+    padding: .5em;
+    color: #555;
+    cursor: pointer;
+    position: relative;
+}
+.dropdown-list--item:hover:not(.dropdown-list--selected) {
+    background: var(--light-grey);
+}
+.dropdown-list--selected {
+    background-color: var(--blue);
+    color: white;
+}
+
 /* For reference: */
+
+/* To add an arrow icon to the left of each item */
+/* .dropdown-list--item:not(.dropdown-list--root)::before {
+    position: absolute;
+    top: .6em;
+    margin-left: -1.1em;
+    font-size: .9em;
+    content: "►";
+} */
+
 /* Set style for the current input item in the droplist, use !important to override library */
 /* .react-dropdown-select-item.react-dropdown-select-item-selected,
 .react-dropdown-select-item.react-dropdown-select-item-active {
