--- a/src/components/HoldingView/HoldingGroupList/HoldingGroupList.css
+++ b/src/components/HoldingView/HoldingGroupList/HoldingGroupList.css
@@ -2,6 +2,14 @@
   min-width: 550px;
 }
 
+.holding-group-list th:first-child,
+.holding-group-list th:nth-child(2),
+.holding-group-list td:first-child,
+.holding-group-list td:nth-child(2) {
+  text-align: left;
+}
+
+.holding-group-list th:not(:first-child):not(:nth-child(2)) button,
 .holding-group-list td:not(:first-child):not(:nth-child(2)) {
-  text-align: right;
+  text-align: right !important;
 }
