--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   --green: #0DB800;
   --red: #B80000;
   --light-grey: #F2F2F2;
-  --light-grey2: #F9F9F9;
-  --medium-grey: #949494;
+  --light-grey2: #e0e0e0;
+  --medium-grey: #a6a6a6;
   --dark-grey: #4B4B4B;
   --outer-padding: .75em;
   --default-font-size: .85em;
