Reformatted chart options on bottom of chart.  Change YTD change column from delta symbol (looked like sort symbol) to ‘YTD Chg’.  Changed spacing between sections of content  in each column.  Added support for sub heading in table col headings, and updated related css.  hange balance formatter function to include cents.  Changed holdings view filters (in Networth page and fed down through account view and holding view) to use id’s instead of names for matching, and stored both the id and name (label) in the value.  Updated holding view to make ‘Holdings’ header clickable to show all transactions for selected account.  If an individual account was not selected (a category group or all was selected), then a message is displayed saying to choose an individual account to view all transactions.  Had to pass in filter value to Holdings View and derive scope in Holdings View instead of passing it in.  Color coded filters drop lists and date to denote applied and unapplied values.  Changed color of graph so it is not the same as the color for active items and made the line thinner on the line graph.

--- a/src/components/AccountView/AccountTypeCategoryList/AccountTypeCategoryList.css
+++ b/src/components/AccountView/AccountTypeCategoryList/AccountTypeCategoryList.css
@@ -1,8 +1,12 @@
 .account-view-table th:first-child,
+.account-view-table th:first-child button,
 .account-view-table td:first-child {
     text-align: left;
+    justify-content: start;
 }
 .account-view-table th:not(:first-child),
+.account-view-table th:not(:first-child) button,
 .account-view-table td:not(:first-child) {
     text-align: right;
+    justify-content: end;
 }
