--- a/src/components/NetworthChart/NetworthChartOptions/NetworthChartOptions.css
+++ b/src/components/NetworthChart/NetworthChartOptions/NetworthChartOptions.css
@@ -1,17 +1,21 @@
 .networth-chart--options {
     width: 100%;
-    display: flex;
-    justify-content: end;
-    gap: 1em;
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+    justify-content: center;
+    row-gap: .25em;
+    column-gap: 1em;
     color: var(--medium-grey);
 }
 
-.networth-chart--options--time-period {
+.networth-chart--options--sub-options {
     display: flex;
     gap: 1.5em;
+    padding-top: .25em;
+    width: max-content;
+    border-top: 1px solid var(--medium-grey);
 }
 
-.networth-chart--options--units {
-    display: flex;
-    gap: 1em;
+.networth-chart--options-left-side {
+    justify-self: end;
 }
