--- a/src/components/BasicTable/BasicTableColHeadings/BasicTableColHeadings.css
+++ b/src/components/BasicTable/BasicTableColHeadings/BasicTableColHeadings.css
@@ -1,5 +1,7 @@
 .basic-table--col-headings--button {
     width: 100%;
+    display: flex;
+    gap: .5em;
 }
 
 .basic-table--col-headings--button span:nth-child(2) {
