Changed Modal to support new type: noButtons, which also updates modal return value from boolean to structure that includes boolean and any content.  Added filter bar option to view account types/accounts as popup to browse hierarchy and drill down values and set filters based on that.  Added filter bar option to view asset classes/assets as popup to browse hierarchy and drill down values and set filters based on that.  Created new text box for the tree filter popup, only showing asset or account if set, otherwise asset class or account type if set.  Created TreeView component to display trees with collapsibility and collapse and expand all.  Changed color of drop list border to match medium-grey variable.  enamed showConfirmation to showModal for Modal Provider since it supports more than confirmation now.

--- a/src/components/DropdownList/DropdownList.css
+++ b/src/components/DropdownList/DropdownList.css
@@ -15,6 +15,10 @@
     text-overflow:ellipsis !important;
 }
 
+.react-dropdown-select {
+    border-color: var(--medium-grey) !important;
+}
+
 .dropdown-list--item {
     padding: .5em;
     color: #555;
